    //My Cases - DateFOrmat(V)
    //Raise a case - Bird/Animal Type - Seperation (V)
    //My Cases - Search Case (V)
    //Case Details - +91 Missing (V)
    //Top Nav - DP - Img not Icon
    //Success - Assign Case Timing Increase
    //ProfileCompletion - Pincode Page Formatting
    //Top 5 and nearest - Styling
    //Success - Assign Case Navigation to Search Case
    //Assign and Close Case dont go on clicking my cases
    //Vol - Tooltip Fix
    //Preview Page Password (V)
    //Pincode Page Backend (V)

01/01/2018
    //Table4 - My Cases
    //Assign_case Issue
    //Top_nav_major Nav Issue
    //CheckBox Issue - Doesn't Retain State
    //Close-Case Other Issue
    //Remove button - Pincode

06/01/2018
    //Assign-Page : Loading
    //Step3 - Server Error
    //+91 - 022 - Change Validation
    //Assign Case - Search and Alignment
    //Tarun - Date - My Cases -> Creation Date
    //Raise-Caise Dropdown - Bird/Animal Type
    //Close Case
    //Refresh on Home instead Refresh

07/01/2018
    //Assign Case - pointerEvents
    //CloseCase - Default on Select
    //My Cases - Default Active Tab
    //Ability to add Bird/Animal - Raise a Case

11/01/2018
    Mobile No. - Error - Styling
    All Warnings/Errors
    Mobile Number Validation - Explicit - or Try to remove msg
    //Toggle - Password - Step3 - Any page where required
    Home/Work Address - Full Name field backend integration
    //Progress Bar - ProfileCompletion
    Preview for ProfileCompletion
    Multi-Select for Prefered Timings
    //Contact Name, Location - Mandate Raise a Case
    //Case Status - VolName and Role
    //Top - Nav - Role of volunteer
    Top Case select - Top Vol - Break
    Top - Nav -User - Back Button
    Loading Screen - Assign Case (First Screen)
    //My Cases - Search
    //Success - Assign - msg
    Action Center - Top Nav - Recpt dashboard
    //Recpt Dashboard - My Cases - Add Column - Case accepted/not
    Perform Styling Run through