@@ -95,7 +95,7 @@ main {
 }
 
 .side-nav-anim {
-    animation: side-nav-anim 0.5s forwards 0s ease-in-out;
+    animation: side-nav-anim 0.5s forwards 0s ease-out;
 }
 
 @keyframes side-nav-anim {
@@ -115,7 +115,7 @@ main {
     font-size: 4em;
     font-weight: 100;
     top: -6vw;
-    left: 2vw;
+    right: 2vw;
     color: black;
     z-index: 11;
 }
@@ -143,22 +143,17 @@ main {
     border-radius: 50%;
 }
 
-#user_name {
+#user_name, #user_role {
     position: relative;
     display: block;
-    top: -20vw;
-    float: right;
     margin-right: 3vw;
     font-size: 1.2em;
+    left: 30vw;
+    top: -10vh;
+    margin-bottom: -7vh;
 }
-
 #user_role {
-    position: relative;
-    display: block;
-    top: -13vw;
-    right: -24.5vw;
-    float: right;
-    font-size: 1.2em;
+    margin-top: 8vh;
 }
 
 #top-part {
@@ -166,16 +161,17 @@ main {
 }
 
 #profile-links {
-    padding: 7vw;
     position: relative;
-    text-align: center;
+    text-align: left;
     border-bottom: 1px solid white;
 }
+#profile-links button {padding: 0;display: block;margin: 3vh 5vw;}
 
 #profile-changes {
     position: relative;
     border-bottom: 1px solid white;
 }
+#profile-changes button {padding: 0;display: block;margin: 3vh 5vw;}
 
 #social-links {
     box-sizing: border-box;
@@ -522,7 +518,8 @@ h1 {
 }
 
 .case-photos img {
-    max-width: 23vw;
+    max-width: 22.5vw;
+    border: 1px solid #CCC;
 }
 
 .contact-number {
@@ -575,6 +572,36 @@ h1 {
 
 .celebrations {
     margin-top: 2vh;
+}
+
+/*--------OTHER-ELEMENTS------------------------------------------------------*/
+/*-------------------ENLARGE-PHOTO---------------------*/
+#dynamic_image_enlarge {
+    display: none;
+    position: fixed;
+    top: 15vh;
+    left: 0vw;
+    width: 100vw;
+    height: 70vh;
+    background-color: #B9CCC4;
+    z-index: 1001;
+    text-align: center;
+}
+
+#dynamic_image_enlarge img {
+    margin-top: 10vh;
+    width: 70vw;
+    margin-bottom: 10vh;
+    background-color: rgba(255,255,255,0.6);
+}
+
+#dynamic_image_enlarge button {
+    background-color: #333;
+    color: white;
+    padding: 2vh 3vh;
+    float: right;
+    letter-spacing: 1px;
+    margin-right: 10vw;
 }
 
 /*--------------------------BOTTOM-ACTION-BAR------------------------*/
