@@ -95,7 +95,7 @@ main {
 }
 
 .side-nav-anim {
-    animation: side-nav-anim 0.5s forwards 0s ease-in-out;
+    animation: side-nav-anim 0.5s forwards 0s ease-out;
 }
 
 @keyframes side-nav-anim {
@@ -115,7 +115,7 @@ main {
     font-size: 4em;
     font-weight: 100;
     top: -6vw;
-    left: 2vw;
+    right: 2vw;
     color: black;
     z-index: 11;
 }
@@ -143,22 +143,17 @@ main {
     border-radius: 50%;
 }
 
-#user_name {
+#user_name, #user_role {
     position: relative;
     display: block;
-    top: -20vw;
-    float: right;
     margin-right: 3vw;
     font-size: 1.2em;
+    left: 30vw;
+    top: -10vh;
+    margin-bottom: -7vh;
 }
-
 #user_role {
-    position: relative;
-    display: block;
-    top: -13vw;
-    right: -24.5vw;
-    float: right;
-    font-size: 1.2em;
+    margin-top: 8vh;
 }
 
 #top-part {
@@ -166,16 +161,17 @@ main {
 }
 
 #profile-links {
-    padding: 7vw;
     position: relative;
-    text-align: center;
+    text-align: left;
     border-bottom: 1px solid white;
 }
+#profile-links button {padding: 0;display: block;margin: 3vh 5vw;}
 
 #profile-changes {
     position: relative;
     border-bottom: 1px solid white;
 }
+#profile-changes button {padding: 0;display: block;margin: 3vh 5vw;}
 
 #social-links {
     box-sizing: border-box;
