@@ -1,4 +1,5 @@
 var caseImageRetriever = function (caseId, imageDiv) {
+    $('.' + imageDiv).html("");
     var formData = {
         'caseId': caseId
     };
@@ -8,16 +9,27 @@ var caseImageRetriever = function (caseId, imageDiv) {
         url: '/getCaseImages',
     })
         .done(function (data) {
-                $('#' + imageDiv).html("");
-                $.each(data, function (i, item) {
-                    var image = document.createElement("img");
-                    image.setAttribute("src", "data:image/png;base64," + item);
-                    image.setAttribute("onclick", "enlargePhoto(this);");
-                    $('#' + imageDiv).append(image);
-                });
+                if(data === null || data === undefined || data.length === 0){
+                    $('#' + imageDiv).html("No Photos");
+                } else {
+                    $.each(data, function (i, item) {
+                        var image = document.createElement("img");
+                        image.setAttribute("src", "data:image/png;base64," + item);
+                        image.setAttribute("onclick", "enlargePhoto(this);");
+                        $('#' + imageDiv).append(image);
+                    });
+                }
             }
         );
 };
+
+$(function(){
+    var includes = $('[data-include]');
+    jQuery.each(includes, function(){
+      var file = '/templates/Vol_Dashboard/' + $(this).data('include') + '.html';
+      $(this).load(file);
+    });
+});
 
 function enlargePhoto(this_t) {
     $('#dynamic_image_enlarge').css('display', 'block');
