@@ -92,7 +92,7 @@
                     <label for="condition-case-details">Condition: </label>
                     <input th:value="${caseInfo.animalCondition}" disabled id="condition-case-details" type="text">
                     <label for="case-photos-case-details">Photos Uploaded</label>
-                    <div id="case-photos-case-details">None</div>
+                    <div id="case-photos-case-details" class="case-photos-case-details">None</div>
                 </div>
             </div>
             <div id="form-bottom-side-case-details">
