@@ -91,8 +91,8 @@
             </div>
             
             <div class="cta-btns">
-                <button class="reject-btn" onclick="decline()">Reject</button>
-                <button class="accept-btn" onclick="accept()">Accept</button>
+                <button class="reject-btn" onclick="accept_reject(false)">Reject</button>
+                <button class="accept-btn" onclick="accept_reject(true)">Accept</button>
             </div>
         </div> 
     </div>
